End of Day 10th June 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PaginationBundle/Resources/views/Default/index.html.twig
+++ b/src/Busybee/PaginationBundle/Resources/views/Default/index.html.twig
@@ -1,13 +1,13 @@
 {% trans_default_domain 'BusybeePaginationBundle' %}
 
-{% set form = pagination.getForm %}
+ {% set form = pagination.getForm %}
 
 {% form_theme form 'bootstrap_3_horizontal_layout.html.twig' %}
 
 {% if form_array is not defined %}
     {% set form_array = [] %}
 {% endif %}
-{% set form_array = form_array|merge({'attr': {'id': 'paginator'}}) %}
+{% set form_array = form_array|merge({'attr': {'id': pagination.getName|lower ~ '_pagination'}}) %}
 
 {% if pagination.getReDirect != false %}
     <script>
