--- a/src/Busybee/PaginationBundle/Resources/views/Default/index.html.twig
+++ b/src/Busybee/PaginationBundle/Resources/views/Default/index.html.twig
@@ -18,7 +18,8 @@
 {{ form_start(form, form_array) }}
 <div class="container-fluid well" style="padding: 0 15px 5px;">
     <div class="row">
-        <div class="col-sm-2 text-right">
+        <div class="col-sm-3 text-right">
+            {% if pagination.displaySearch %}
             <label class="control-label">{{ form.currentSearch.vars.label|trans }}</label>
             <div class="input-group">
                 {{ form_widget(form.currentSearch) }}
@@ -26,23 +27,26 @@
                     {{ saveButton({'class': 'btn btn-success halflings halflings-search', 'additional': 'id="paginator_startSearch" name="paginator[startSearch]"', 'style': 'height: 33px; margin-top: -2px; '})|raw }}
                 </div>
             </div>
+            {% endif %}
+            {% do form.currentSearch.setRendered %}
         </div>
-        <div class="col-sm-2 text-right">
-            {% if form.currentSort.vars.choices is not empty %}
+        <div class="col-sm-3 text-right">
+            {% if pagination.displaySort and form.currentSort.vars.choices is not empty %}
                 <label class="control-label">{{ form.currentSort.vars.label|trans }}</label>
                 {{ form_widget(form.currentSort) }}
             {% endif %}
             {% do form.currentSort.setRendered %}
         </div>
-        <div class="col-sm-2 text-right">
-            {% if form.choice is defined %}
+        <div class="col-sm-3 text-right">
+            {% if pagination.displayChoice and form.choice is defined %}
                 <label class="control-label">{{ form.choice.vars.label|trans }}</label>
                 {{ form_widget(form.choice, {value: pagination.getChoice }) }}
                 {{ form_widget(form.lastChoice, {value: pagination.getChoice }) }}
             {% endif %}
         </div>
-        {% if pagination.getTotal > pagination.getLimit %}
-            <div class="col-sm-3 col-sm-offset-3 text-right">
+
+        {% if pagination.displayResult and pagination.getTotal > pagination.getLimit %}
+            <div class="col-sm-3 text-right">
                 {{ form_widget(form.lastSearch, {value: pagination.getSearch }) }}
                 {{ form_widget(form.offSet, {value: pagination.getOffSet}) }}
                 <label class="control-label">{{ form.limit.vars.label|trans }}</label>
@@ -64,8 +68,8 @@
                 pagination.figures
                 {% endtranschoice %}
             </div>
-        {% elseif pagination.getTotal > 10 %}
-            <div class="col-sm-3 col-sm-offset-3 text-right">
+        {% elseif pagination.displayResult and pagination.getTotal > 10 %}
+            <div class="col-sm-3 text-right">
                 <label class="control-label">{{ form.limit.vars.label|trans }}</label>
                 <div class="text-right">
                     {{ form_widget(form.limit, {'value': '' ~ pagination.limit, 'attr': {'style': 'max-width: 150px; width: 150px;'}}) }}
@@ -77,9 +81,8 @@
                 {% endtranschoice %}
 
             </div>
-        {% else %}
-            {% do form.limit.setRendered %}
-            <div class="col-sm-3 col-sm-offset-3 text-right">
+        {% elseif pagination.displayResult %}
+            <div class="col-sm-3 text-right">
                 <label class="control-label">&nbsp;</label>
                 <div class="text-right">
                     {{ 'pagination.records.only'|trans({'%total%': pagination.getTotal}, 'BusybeePaginationBundle') }}
@@ -87,6 +90,7 @@
             </div>
             <input type="hidden" name="paginator[limit]" id="paginator_limit" value="{{ pagination.limit }}"/>
         {% endif %}
+        {% do form.limit.setRendered %}
     </div>
 </div>
 {{ form_end(form) }}
