--- a/src/Busybee/StudentBundle/Resources/views/Activity/edit.html.twig
+++ b/src/Busybee/StudentBundle/Resources/views/Activity/edit.html.twig
@@ -33,11 +33,16 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="row">
-                    <div class="col-sm-8 well">
+                    <div class="col-sm-12 well">
                         {{ form_row(form.name) }}
                     </div>
-                    <div class="col-sm-4 well">
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 well">
                         {{ form_row(form.nameShort) }}
+                    </div>
+                    <div class="col-sm-6 well">
+                        {{ form_row(form.teachingLoad) }}
                     </div>
                 </div>
                 <div class="row">
